--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,5 @@ workflows:
           requires:
             - install
           filters:
-            branch:
+            branches:
               only: /^master$/
