--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,4 @@ workflows:
             - install
           filters:
             branches:
-              only: /^master$/
+              only: /^master/
