--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-add-event-listener",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "AddEventListener plugin for Vue",
-  "main": "dist/index.umd.js",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "unpkg": "dist/index.min.js",
+  "unpkg": "dist/index.umd.js",
   "scripts": {
     "build": "rollup --config build/rollup.config.js"
   },
